--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,8 +17,8 @@ Imports:
     dplyr,
     ppitables,
     odkr (>= 0.3.2)
-Remotes:  
+Remotes: 
     validmeasures/odkr
 Encoding: UTF-8
 LazyData: true
-
+RoxygenNote: 6.1.1
