--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(calculate_domain)
 export(calculate_mddw)
 export(calculate_production)
+export(calculate_resources)
 export(calculate_sers)
 export(calculate_wg)
 export(expandMultipleChoice)
