--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(calculate_credit)
 export(calculate_domain)
+export(calculate_group)
 export(calculate_mddw)
 export(calculate_production)
 export(calculate_resources)
