--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(calculate_credit)
 export(calculate_domain)
+export(calculate_gpi)
 export(calculate_group)
 export(calculate_mddw)
 export(calculate_production)
@@ -15,5 +16,6 @@ importFrom(odkr,export_data)
 importFrom(odkr,get_briefcase)
 importFrom(odkr,pull_remote)
 importFrom(odkr,renameODK)
+importFrom(stringr,str_detect)
 importFrom(stringr,str_split)
 importFrom(utils,read.csv)
